Moved GraalPython doc to its own file and changed PythonEmbedding.java to copy all Engine resources to a temporary directory